UI fixes
- Messenger button container off center
- Footer being awful on mobile

--- a/src/containers/calculator/steps/metrics/metrics.scss
+++ b/src/containers/calculator/steps/metrics/metrics.scss
@@ -1,6 +1,9 @@
 @import '../../../../styles/_variables.scss';
+@import '../../../../styles/includeMedia';
 
 .metricContainer {
+  margin-bottom: 35px;
+
   h3, h4 {
     text-align: center;
   }
@@ -83,5 +86,9 @@
 .messenger-container {
   div {
     margin-left: 35px;
+
+    @include media('<=iphoneplus') {
+      margin-left: 20px;
+    }
   }
 }
