--- a/src/containers/footer/footer.scss
+++ b/src/containers/footer/footer.scss
@@ -5,10 +5,11 @@
   background-color: #242424;
   min-width: 100%;
   bottom: 0;
-  margin-top: 5%;
+  margin-top: 75px;
+  z-index: 4;
 
   @include media('<=iphoneplus') {
-    margin-top: 25%;
+    position: absolute;
   }
 
   p {
